Version 1.4.4:

* Took the gzip compression code from CVSweb and plonked it in.  Works
  nicely with Mozilla/Netscape/Konqueror.  If the Compress::Zlib
  library is installed, that is used for compression, otherwise the
  "gzip" executable is used (although this isn't an option if you are
  running this script within mod_perl).  [Note there are two new
  options in codestriker.conf - $use_compression and $gzip]

* Codestriker now works under mod_perl successfully.  Updated
  installation instructions for use under mod_perl.

Version 1.4.3:

* New popup viewing mode "parallel".  In addition to being able to
  bring up a new window containing the contents of a file in its
  original or new form, you can also set the popup display to be a
  coloured diff, containing the contents of the original and the new
  file side by side (similar to the main screen in coloured diff
  mode).  While this mode is more bandwidth intensive, this can also
  aid considerably in the reviewing process.

* Tab width can now be changed dynamically between 4 and 8 to handle
  varying review inputs.  Tab expanision is also handled more
  consistently.

* Support for "diff -uNp", "diff -uN --show-function-line=regexp",
  "cvs diff -uNp" and "cvs diff -uN  --show-function-line=regexp".

* URLs entered in the description or in a comment will be rendered as
  a link to that URL.

* Allow the bug field to accept multiple bug IDs.

* Introduced codestriker.conf, which isolates a site's configuration
  into a single file.  This simplifies upgrading.

Version 1.4.2:

* Can now handle diffs which end in: "\ No newline at end of file".

* Changed the HTML generation for popup windows displaying old/new
  versions of a file to use <PRE> rather than a table, which cuts down
  the loading time considerably.  Note, the codestriker.css file had
  to be changed.

Version 1.4.1:

* Popup windows were not resizable in IE due to a bug in the
  javascript code.  Has now been fixed.

Version 1.4:
